[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/Enemys/toaster_sheet.png" type="Texture" id=1]
[ext_resource path="res://World/Enemys/Enemy_Toast.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 211.218, 26.9733 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 10.9947 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 27.6626, 10 )

[sub_resource type="Animation" id=4]
resource_name = "attack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("orientation/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6, 4, 3, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "bullet"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "die"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("orientation/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/path = NodePath("orientation/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("orientation/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1, 0 ]
}

[sub_resource type="CircleShape2D" id=8]
radius = 28.5878

[node name="Toast" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )

[node name="orientation" type="Node2D" parent="."]

[node name="sprite" type="Sprite" parent="orientation"]
texture = ExtResource( 1 )
hframes = 10
frame = 5

[node name="muzzle" type="Position2D" parent="orientation/sprite"]
position = Vector2( -25.9566, -38.6989 )

[node name="detect_player" type="Area2D" parent="orientation"]
collision_layer = 0
collision_mask = 2

[node name="shape" type="CollisionShape2D" parent="orientation/detect_player"]
position = Vector2( -209.895, 0 )
shape = SubResource( 1 )

[node name="detect_floor" type="Area2D" parent="orientation"]
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="orientation/detect_floor"]
position = Vector2( -37.3039, 40.7369 )
shape = SubResource( 2 )

[node name="detect_wall" type="Area2D" parent="orientation"]
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="orientation/detect_wall"]
position = Vector2( -40.7687, 0.104418 )
shape = SubResource( 2 )

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 2.57953, 37.1055 )
shape = SubResource( 3 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/die = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="patrol" type="Timer" parent="."]

[node name="attack_refil" type="Timer" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="shape" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 8 )
[connection signal="body_entered" from="orientation/detect_player" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="orientation/detect_player" to="." method="_on_detect_player_body_exited"]
[connection signal="body_exited" from="orientation/detect_floor" to="." method="_on_detect_floor_body_exited"]
[connection signal="body_entered" from="orientation/detect_wall" to="." method="_on_detect_wall_body_entered"]
[connection signal="timeout" from="patrol" to="." method="_on_patrol_timeout"]
[connection signal="timeout" from="attack_refil" to="." method="_on_attack_refil_timeout"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
